@@ -9,6 +9,12 @@
 	(PokerAvatarTestCase.listTables): Wrote function.
 	(PokerAvatarTestCase.getPlayerInfoError): Wrote function.
 	(PokerAvatarTestCase.test27_playerInfoNotLoggedIn): Wrote function.
+	(PokerAvatarTestCase.normalSetRoles): Wrote function, pulling out
+	and expanding sub function in test06_setRoles.
+	(PokerAvatarTestCase.test06_setRoles): Rewrote to use normalSetRoles.
+	(PokerAvatarTestCase.test06_7_setUnknownRole): Wrote function.
+	(PokerAvatarTestCase.errorSetRoles): Wrote function.
+	(PokerAvatarTestCase.test06_8_setRoleAfterAnotherUserHas): Wrote function.
 
 2008-02-23  Bradley M. Kuhn  <bkuhn@ebb.org>.
 
